ui/main.css
@viewport {
    width: device-width;
    zoom: 1.0;
}

@font-face {
    font-family: Noto;
    src: local("Noto Emoji"), local("Noto Color Emoji"), local("Noto"), 
    url("https://cdn.rawgit.com/googlei18n/noto-emoji/master/fonts/NotoEmoji-Regular.ttf");
}

html {
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    height: 100%;
    font-family: 'Red Hat Text', 'Noto Color Emoji', 'Noto Emoji', sans-serif;
    margin: 0;
    padding: 0;
    color: rgb(255, 255, 255);
    -ms-overflow-style: none;
}

::-webkit-scrollbar {
    width: 8px;
}
 
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 16px;
    border-radius: 16px;
    background: rgb(32, 34, 37); 
}

::-webkit-scrollbar-corner {
    background: rgb(54, 57, 63);
}

.sidenav {
    height: 100%;
    width: 72px;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgb(32, 34, 37);
    text-align: center;
    padding-top: 10px;
    float: left;
    z-index: 2;
    overflow-x: hidden;
}

.sidenav .server {
    height: 48px;
    width: 48px;
    text-align: center;
    margin: auto;
    background-color: rgb(54, 57, 63);
    border-radius: 100%;
    vertical-align: middle;
    margin-bottom: 10px;
    position: relative;
    transition: linear 0.2s;
}

.server .selector {
    height: 18px;
    width: 0px;
    position: fixed;
    margin-top: 15px;
    left: 0;
}

.sidenav .server:hover {
    background-color: rgb(114, 137, 218);
    border-radius: 35%;
    cursor: pointer;
}

.sidenav .server:hover > .selector {
    border-right: 4px solid rgb(255,255,255);
    height: 18px;
    width: 1px;
    position: fixed;
    left: 0;
    border-radius: 20%;
    margin-top: 15px;
    transition: linear 0.2s;
}

.sidenav .server.selected {
    background-color: rgb(114, 137, 218);
    border-radius: 35%;
    transition: linear 0.2s;
}

.sidenav .server.selected > img {
    border-radius: 35%;
    transition: linear 0.2s;
}

.sidenav .server.selected > .selector {
    border-right: 4px solid rgb(255,255,255);
    height: 40px;
    width: 1px;
    position: fixed;
    left: 0;
    border-radius: 20%;
    margin-top: 6px;
    transition: linear 0.2s;
}

.sidenav p {
    color: rgb(255, 255, 255);
    padding-top: 33%;
    font-size: 12px;
    font-weight: bolder;
}

.server img {
    height: 48px;
    width: 48px;
    border-radius: 100%;
    pointer-events: none;
    transition: linear 0.2s;
}

.sidenav .server:hover > img {
    border-radius: 35%;
}

.sidenav p::selection, .sidenav a::selection, .sidenav::selection, .sidenav div::selection, .sidenav img::selection {
    background: none;
}

.sidenav i {
    color: rgb(255, 255, 255);
    font-size: 25px;
    padding-top: 20%;
}

.sidenav hr {
    width: 50%;
    color: rgb(65, 65, 68);
}

.tooltip {
    visibility: hidden;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    padding: 5px;
    border-radius: 6px;
    position: absolute;
    z-index: 99 !important;
    top: -5px;
    left: 105%; 
    overflow: hidden;
    white-space: nowrap;
    font-size: 12px;
    font-weight: 550;
    transform: translate(5px, 15px);
    display: none;
}

.server:hover .tooltip {
    visibility: hidden;
}

.actionbar {
    height: 100%;
    width: 240px;
    background-color: rgb(47, 49, 54);
    position: fixed;
    left: 0;
    top: 0;
    margin-left: 72px;
    z-index: 1;
}

.main {
    height: 100%;
    width: 100%;
    margin-left: 311px;
    position: fixed;
    float: left;
    top: 0;
    background-color: rgb(54, 57, 63);
}

.user {
    width: 240px;
    height: 53px;
    position: fixed;
    bottom: 0;
    background-color: rgb(41, 43, 47);
}

.user .avatar {
    padding-left: 8px;
    padding-right: 4px;
    padding-top: 10px;
    display: inline-block;
    pointer-events: none;
}

.user img {
    width: 32px;
    height: 32px;
    border-radius: 100%;
}

.user p {
    margin: 0;
    color: rgb(255, 255, 255);
}

.user .username {
    display: inline-block;
    transform: translateY(-3px);
}

.user .name {
    font-size: 12px;
    font-weight: bolder;
    text-overflow: ellipsis;
    width: 150px;
    white-space: nowrap;
    overflow: hidden;
}

.user .discriminator {
    font-size: 9px;
    font-weight: lighter;
}

.user .fa-sign-out-alt {
    height: 20px;
    width: 20px;
    font-size: 20px;
    cursor: pointer;
    color: rgb(185, 187, 190);
    position: fixed;
    left: 275px;
    bottom: 16.5px;
}

.user .fa-sign-out-alt:hover {
    color: rgb(125, 127, 131);
}

.user img::selection, .user::selection, .user div::selection{
    background: none;
}

.infobar {
    width: 100%;
    height: 48px;
    position: fixed;
    top: 0;
    background-color: rgb(54, 57, 63);
    box-shadow: 1px 1px 1px rgba(0,0,0,0.4);
}

.infobar .fa-hashtag, .infobar .fa-at {
    height: 23px;
    width: 23px;
    font-size: 23px;
    color: rgb(114, 118, 125);
    display: inline-block;
    margin-left: 20px;
    margin-top: 12.5px;
    margin-right: 4px;
}

.infobar .chantitle {
    display: inline-block;
    font-weight: 500;
    font-size: 15px;
    transform: translateY(-2px);
    width: calc(100% - 400px);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.actioninfo {
    width: 240px;
    height: 48px;
    position: fixed;
    top: 0;
    background-color: rgb(47, 49, 54);
    box-shadow: -1px 1px 1px rgba(0,0,0,0.4);
}

.actioninfo p {
    font-weight: bold;
    font-size: 12px;
    margin-left: 13px;
    margin-right: 13px;
    margin-top: 18px;
    pointer-events: none;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    width: 200px;
}

.actioninfo p::selection, .actioninfo::selection, .actionbar::selection {
    background: none;
}

.mainbox {
    width: 100%;
    height: 100%;
    margin-top: 49px;
    display: inline-block;
}

.memberbar {
    width: 240px;
    height: 100%;
    background-color: rgb(47, 49, 54);
    display: inline-block;
    position: fixed;
    right: 0;
}
/* ... */

